--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     height: calc(25% - 20px) ;
     margin: 10px;
     /* background-size: cover; */
-    /* border: 5px solid #755f40; */
+    border: 7px solid #ffdc00;
     /* background-color:#fff; */
 }
 
