--- a/style.css
+++ b/style.css
@@ -120,6 +120,26 @@ body{
     margin: 10px;
     border: 7px solid var(--main-color);
     background-position:center;
+    perspective: 800px;
+    transform-origin: center;
+    backface-visibility: hidden;
+}
+
+.rotate {
+    animation-name:  rotate;
+    animation-duration: 0.5s;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotateY(0deg);
+    }
+    50% {
+        transform: rotateY(180deg);
+    }
+    100% {
+        transform: rotateY(360deg);
+    }
 }
 
 .card__close {
@@ -240,27 +260,7 @@ text-align: center;
     font-weight: 800;
     transition: 0.5s;
 
-    /* opacity: 0.8; */
-    /* font-weight: 800; */
-    /* animation: one-step 2s ease-in-out;  */
-
-} 
-
-@keyframes one-step {
-    0% {
-        padding: 0;
-    }
-    25% {
-        padding: 5px;
-    }
-    50% {
-        padding: 0;
-    }
-    100% {
-        padding: 5px;
-    }
 }
 
-
 /* .control-panel__button-volume {
-} */
+}  */
