--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ html{
     height: 100%;
     font-size: 20pt;
     --main-color: #ffdc00;
-    background-color:lightcoral;
+    background-color:rgb(253, 230, 230);
      
 }
 
@@ -62,7 +62,10 @@ body{
     justify-content: space-between;
     align-items: center;
     margin: 20px;
-    border: 10px solid var(--main-color);
+    background: var(--main-color);
+    color: #000;
+    border: 1px solid transparent;
+    box-shadow: 0px 0px 10px #fff;
 }
 
 .header__logo{
@@ -79,8 +82,6 @@ body{
     padding: 20px;
     text-align: center;
     font-size: 50px;
-    color: var(--main-color)
-    /* background-color: var(--main-color); */
 }
 
 .general {
@@ -96,22 +97,21 @@ body{
 
 
 .memory-game{
-    /* max-width: 1000px; */
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: stretch;
     border: 10px solid var(--main-color);
+    box-shadow: 0px 0px 10px #fff;
+
 }
 .game-field {
     max-width: 900px;
     width: 800px;
     height: 800px;
-    /* margin: 0 auto; */
     padding: 10px;
     display: flex;
     flex-wrap: wrap;
-    /* background-color:lightcoral; */
 }
 
 .card{
@@ -199,7 +199,6 @@ body{
 
 .menu__button:hover {
   background: var(--main-color);
-  /* transform: translate(0, 5px); */
 }
 
 .menu__button:active {
@@ -236,12 +235,12 @@ text-align: center;
     align-content: center;
     margin: 20px;
     padding: 20px;
-    border: 10px solid var(--main-color);
+    background-color: var(--main-color);
+    color: #000;
+    /* border: 10px solid var(--main-color); */
+    box-shadow: 0px 0px 10px #fff;
+
 }
-/* .footer__data {
-}
-.footer__school {
-} */
 
 .footer__link,
 .footer__link:active,
@@ -249,12 +248,10 @@ text-align: center;
     color: inherit;
     text-decoration: none;
     font-weight: 400;    
-
-    /* transition: 2s; */
 }
 
 .footer__link:hover {
-    color: var(--main-color);
+    color: rgb(253, 230, 230);
     font-weight: 800;
     transition: 0.5s;
 
@@ -278,14 +275,83 @@ text-align: center;
 
 }
 
-
 .popup__module {
     min-height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 20px;
+    position: relative;
 }
+
+.winner{
+    position: absolute;
+    width: 600px;
+    height: 600px;
+    top: 50%; 
+    right: 50%;
+    transform: translate(50%,-50%);
+}
+
+
+.winner__text{
+    position: absolute;
+    top: 50%; 
+    right: 50%;
+    transform: translate(50%,-50%);
+    text-transform: uppercase;
+    font-size: 100px;
+    font-weight: 700;
+    line-height: 1.6;
+    text-align: center;
+    color: #f5f5f5;
+    text-shadow: 1px 1px 1px #919191,
+        1px 2px 1px #919191,
+        1px 3px 1px #919191,
+        1px 4px 1px #919191,
+        1px 5px 1px #919191,
+        1px 6px 1px #919191,
+        1px 7px 1px #919191,
+        1px 8px 1px #919191,
+        1px 9px 1px #919191,
+        1px 10px 1px #919191,
+    1px 18px 6px rgba(16,16,16,0.4),
+    1px 22px 10px rgba(16,16,16,0.2),
+    1px 25px 35px rgba(16,16,16,0.2),
+    1px 30px 60px rgba(16,16,16,0.4);
+    visibility: hidden;
+}
+
+.winner__animation{
+    visibility: visible;
+    animation: winner 3s ease-in-out;
+}
+@keyframes winner {
+    0% {
+        /* transform:  */
+        transform: translate(+50%, -50%) scale(0.2);
+        opacity: 0;
+    }
+    20% {
+        transform: translate(+35%, -35%) scale(0.4);
+        color: var(--main-color);
+    }
+
+    60% {
+        transform: translate(+65%, -65%) scale(0.6);
+    }
+    80% {
+        transform: translate(+35%, -35%) scale(0.8);
+        color: var(--main-color);
+    }
+    100% {
+        transform: translate(+50%, -50%) scale(1);
+        opacity: 1;
+
+    }
+}
+
+    
 .popup__content {
     max-width: 800px;
     position: relative;
@@ -296,7 +362,6 @@ text-align: center;
     background-color: var(--main-color);
     border: 5px solid #000;
     text-align: center;
-    /* box-shadow: 1px 1px 1px #fff ; */
 }
 .popup__title {
     font-size: 30pt;
@@ -308,10 +373,8 @@ text-align: center;
 .popup__text p{
     display: inline-block;
     width: calc(50% - 20px);
-    /* border-bottom: 2px solid #000; */
     margin: 10px;
-    /* margin: 0 auto; */
-    /* color: red; */
+    white-space:nowrap;
 }
 
 .popup_close {
