--- a/style.css
+++ b/style.css
@@ -167,7 +167,6 @@ body{
     text-align: center;
     font-family: 'Rampart One';
     font-size: inherit;
-    padding: 5px;
     background: #fffd97;
     border: 2px solid var(--main-color);
     border-radius: 10px;
@@ -216,7 +215,7 @@ body{
 
 .menu__button-sound-on {
     background:#fffd97 url('./assets/png/soundOn.png');
-    background-position: 35px 12px;
+    background-position: 35px 10px;
     background-size: auto 60%;
     background-repeat: no-repeat;
 
@@ -239,7 +238,7 @@ body{
 
 .menu__button-sound-off {
     background:#fffd97 url('./assets/png/soundOff.png');
-    background-position: 35px 12px;
+    background-position: 35px 10px;
     background-size: auto 60%;
     background-repeat: no-repeat;
     transform: translate(0, 10px);
@@ -270,7 +269,7 @@ body{
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-content: center;
+    align-items: center;
     margin: 20px;
     padding: 20px;
     background-color: var(--main-color);
@@ -278,11 +277,19 @@ body{
     box-shadow: 0px 0px 10px #fff;
 }
 
+.footer__data,
+.footer__school {
+    text-align: center;
+    margin: 0 10px;
+}
+
 .footer__link,
 .footer__link:active,
 .footer__link:visited {
+    display: inline-block;
     color: inherit;
     text-decoration: none;
+
 }
 
 .footer__link:hover {
@@ -340,19 +347,19 @@ body{
     align-items: center;
     font-size: inherit;
     text-align: center;
-    
+    line-height: 2;
 }
+
 .popup__text div{
     width: calc(50% - 20px);
     white-space:nowrap;
     text-align: center;
-
 }
 
 .popup_close {
     position: absolute;
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
     color: #000;
     top: 5px;
     right: 15px;
@@ -610,6 +617,16 @@ body{
     .winner__text{
         font-size: 70px;
     }
+
+    .popup__content {
+        max-width: 650px;
+        border: 3px solid #000;
+    }
+    .popup__title {
+        font-size: 20pt;
+        border-bottom: 2px solid #000;
+    }
+
 }
 
 @media screen and (max-width: 680px) {
@@ -636,13 +653,61 @@ body{
     .game-field {
         max-width: 450px;
         min-height: 450px;
+        padding: 5px;
+    }
+
+    .menu {
+        width: 60px;
+        align-items: center;
+        padding: 10px 0;
+        padding-right: 5px;
     }
     .menu__button {
-        width: 50px;
-        height: 50px;
-        position: relative;
-        border-radius: 50%;
+        width: 40px;
+        height: 40px;
         margin-bottom: 15px;
+    }
+
+    .menu__button-sound-title {
+        margin-top: 0;
+        font-family: 'Hachi Maru Pop';
+        font-size: 10pt;
+    }
+
+    .menu__body {
+        max-width: 60px;
+        font-size: 10pt;
+        margin: auto 0;
+        /* padding: 5px 0; */
+        order: 5;
+    }
+
+    .footer {
+        margin: 5px;
+        padding: 10px;
+        font-size: 12pt;
+    }
+
+    
+    .popup__content {
+        max-width: 450px;
+        /* border: 3px solid #000; */
+    }
+    .popup__title {
+        font-size: 16pt;
+        border-bottom: 2px solid #000;
+    }
+    .popup__text {
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: center;
+    }
+
+    .popup__text div{
+        width: 100%;
+    }
+    .winner__text {
+        font-size: 50px;
     }
 
 }
@@ -651,5 +716,9 @@ body{
     .game-field {
         max-width: 350px;
         min-height: 350px;
+    }
+
+    .menu__button-sound-title {
+        margin-top: 0;
     }
 }
